# cropweed-seg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/splits/: test.txt  train.txt  train_p25.txt  train_p50.txt  train_p75.txt  val.txt
docs/: deployment_runbook.md  medium_article_outline.md  roadmap.md
docs/decisions/: 0001-imagenet-normalization.md  0002-baseline-architecture.md  0003-loss-functions.md  0004-deeplabv3plus-experiment.md  0005-calibration-method.md  06-input-resolution-experiment.md  07-augmentation-experiment.md  08-learning-curve.md
notebooks/: 02_transforms_validation.ipynb  03_dataset_sanity.ipynb  04_baseline_training.ipynb  05_test_evaluation.ipynb  06_onnx_export.ipynb  07_quantization.ipynb
runs/baseline/: metrics.csv
runs/baseline_e25/: config.json  metrics.csv
runs/deeplabv3plus_focal_dice/: config.json  metrics.csv
runs/dice/: metrics.csv
runs/dice_e25/: config.json  metrics.csv
runs/focal/: metrics.csv
runs/focal_dice_s42/: metrics.csv
runs/focal_dice_s43/: metrics.csv
runs/unet_focal_dice_crop720/: config.json  metrics.csv
runs/unet_focal_dice_crop768/: config.json
runs/unet_focal_dice_flips/: config.json  metrics.csv
runs/unet_focal_dice_full_e35/: config.json  metrics.csv
runs/unet_focal_dice_p25_e100/: config.json  metrics.csv
scripts/: benchmark_engines.py  build_engines.py  evaluate.py  export_onnx.py  make_demo_frames.py  make_figures.py  make_learning_curve_splits.py  prepare_data.py  quantize.py  train.py
tests/: test_dataset.py  test_masks.py  test_transforms.py
(+12 files in other folders)
