[project]
name = "cropweed-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Muñoz", email = "a.munoz@andersenlab.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[project.scripts]
cropweed-seg = "cropweed_seg:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
