[project]
name = "cropweed-seg"
version = "0.1.0"
description = "Crop-weed semantic segmentation on the peanut dataset, from data exploration to edge deployment"
readme = "README.md"
authors = [
    { name = "Alex Muñoz", email = "alexestornell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "nbconvert>=7.17.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
